--- a/assets/style.css
+++ b/assets/style.css
@@ -90,7 +90,7 @@ h2 {
 }
 
 .text-section {
-    margin-top: 40%;
+    margin-top: 10%;
     margin-left: 30px;
 }
 
@@ -154,7 +154,7 @@ h2 {
     position: relative;
     top: 25%;
     left: 0;
-    width: 950px;
+    width: 100%;
 }
 
 .sectionUcapan .kananAtasUcapan {
@@ -188,13 +188,15 @@ h2 {
 
 .sectionKado .containerKado {
     position:absolute;
-    left: 32%;
     transition: 1s;
+    width: 100%;
 }
 
 .sectionKado .containerKado img{
     transition: 0.6s;
+    margin: auto;
     cursor: pointer;
+    width: 250px;
 }
 
 .sectionKado .containerKado img:hover {
@@ -209,7 +211,7 @@ h2 {
 }
 
 .sectionKado .containerIsiKado img{
-    width: 75%;
+    width: 60%;
     object-fit: cover;
     border-radius: 30px;
 }
@@ -222,7 +224,7 @@ h2 {
 }
 
 .card img {
-    height: 200px;
+    min-height: 150px;
     object-fit: cover;
     border-radius: 30px 30px 0 0px;
 }
@@ -241,7 +243,7 @@ h2 {
     border-radius: 30px;
     box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.1);
     background-color: #f1e4da;
-    height: 650px;
+    height: 400px;
 }
 
 .card-body {
@@ -252,6 +254,7 @@ h2 {
     position: absolute;
     top: 0;
     right: 0;
+    z-index: -9;
 }
 
 .sectionCinema .tengahCinema {
@@ -270,6 +273,7 @@ h2 {
 .sectionJalan .containerMotor img{
     transition: 0.6s;
     cursor: pointer;
+    width: 400px;
 }
 
 .sectionJalan .containerMotor .motor:hover {
@@ -284,7 +288,7 @@ h2 {
 }
 
 .sectionJalan .containerIsiMotor video{
-    width: 75%;
+    width: 60%;
     object-fit: cover;
     border-radius: 30px;
     box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.1);
@@ -297,11 +301,9 @@ h2 {
     z-index: -9;
 }
 
-.sectionGame .tengahGame {
-    position: absolute;
-    bottom: 150px;
-    right: -600px;
-    z-index: -9;
+.sectionGame .games {
+    margin-top: -50px;
+    width: 60%;
 }
 
 .sectionAzka img {
@@ -309,9 +311,9 @@ h2 {
 }
 
 .sectionAzka .kananAtasAzka {
+    position: absolute;
     top: 0;
     right: 0;
-    position: absolute;
     z-index: -9;
 }
 
